# Eden-IOS

./: CMakeLists.txt
.github/workflows/: ios-bootstrap.yml
docs/: IOS_LIVE_DEBUGGING.md  IOS_NEXT_STEPS_CHECKLIST.md  IOS_PORTING_LOG.md
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt
src/audio_core/sink/: sink_stream.cpp
src/common/: CMakeLists.txt  bounded_threadsafe_queue.h  device_power_state.cpp  device_power_state_ios.cpp  host_memory.cpp  polyfill_thread.h  thread.h  thread_worker.h  threadsafe_queue.h
src/core/: CMakeLists.txt
src/core/arm/: exclusive_monitor.cpp
src/core/crypto/: aes_util_ios.cpp  key_manager.cpp
src/core/debugger/: debugger_ios.cpp
src/core/file_sys/: registered_cache.cpp  xts_archive.cpp
src/core/hle/kernel/: k_process.cpp
src/core/hle/service/: services.cpp
src/core/hle/service/bcat/: delivery_cache_directory_service.cpp
src/core/hle/service/bcat/news/: builtin_news.cpp
src/core/hle/service/nfc/common/: amiibo_crypto.h  amiibo_crypto_ios.cpp
src/core/hle/service/ro/: ro.cpp
src/core/loader/: nca.cpp
src/input_common/: CMakeLists.txt
src/ios/: CMakeLists.txt  Info-iOS.plist.in  ios_app_main.m  ios_app_main.mm  ios_bootstrap.cpp  ios_bootstrap.h  ios_bootstrap_c_api.cpp  ios_bootstrap_c_api.h  ios_bootstrap_objc_bridge.h  ios_bootstrap_objc_bridge.mm  ios_emu_window_headless.cpp  ios_emu_window_headless.h  ios_runtime_c_api.cpp  ios_runtime_c_api.h  ios_runtime_demo_controller.h  ios_runtime_demo_controller.mm  ios_runtime_objc_bridge.h  ios_runtime_objc_bridge.mm  ios_runtime_session.cpp  ios_runtime_session.h  ios_runtime_view_model.h  ios_runtime_view_model.mm  ios_setup_c_api.cpp  ios_setup_c_api.h  ios_setup_objc_bridge.h  ios_setup_objc_bridge.mm  ios_vma_impl.cpp
src/shader_recompiler/: CMakeLists.txt
src/video_core/: CMakeLists.txt  cdma_pusher.cpp  gpu_thread.cpp
src/video_core/host1x/ffmpeg/: ffmpeg.cpp
src/video_core/renderer_vulkan/: vk_master_semaphore.cpp  vk_present_manager.cpp  vk_scheduler.cpp  vk_texture_cache.cpp  vk_turbo_mode.cpp
src/video_core/vulkan_common/: vma_impl.cpp
src/yuzu/: bootmanager.cpp
tools/windows/: ios-live-log-server.ps1
